Optimize addBlock method in Blockchain class